scripts/nullaway/wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8.txt
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Main.java:88: error: [NullAway] dereferenced expression rpgObject1.getStats() is @Nullable
        System.out.println(rpgObject1.getName() + " Status: " + rpgObject1.getStatus().name() + " PLAYER1 HP : " + rpgObject1.getStats().getHp() + " : isAlive? " + rpgObject1.isAlive());
                                                                                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Main.java:89: error: [NullAway] dereferenced expression rpgObject2.getStats() is @Nullable
        System.out.println(rpgObject2.getName() + " Status: " + rpgObject2.getStatus().name() + " PLAYER2 HP : " + rpgObject2.getStats().getHp() + " : isAlive? " + rpgObject2.isAlive());
                                                                                                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:56: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:58: error: [NullAway] unboxing of a @Nullable value
        return getStats().getHp() > 0;
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:58: error: [NullAway] dereferenced expression getStats() is @Nullable
        return getStats().getHp() > 0;
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:64: error: [NullAway] dereferenced expression getStats() is @Nullable
            getStats().setHp(0L);
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:101: error: [NullAway] dereferenced expression rpgObject.getStats() is @Nullable
        Long currentHp = rpgObject.getStats().getHp();
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:102: error: [NullAway] unboxing of a @Nullable value
        Long resultHp = currentHp - hp;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:102: error: [NullAway] unboxing of a @Nullable value
        Long resultHp = currentHp - hp;
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:113: error: [NullAway] dereferenced expression rpgObject.getStats() is @Nullable
        LOGGER.info("Adding " + hp + " to " + rpgObject.getName() + " " + rpgObject.getStats().getHp());
                                                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:115: error: [NullAway] unboxing of a @Nullable value
        Long processedHp = livingObjectHp + hp;
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:115: error: [NullAway] unboxing of a @Nullable value
        Long processedHp = livingObjectHp + hp;
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Job.java:70: error: [NullAway] dereferenced expression zkill.getName() is @Nullable
            String name = zkill.getName().toLowerCase();
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:40: error: [NullAway] dereferenced expression monster.getStats() is @Nullable
        assertEquals(expectedHp, monster.getStats().getHp());
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:49: error: [NullAway] dereferenced expression monster.getStats() is @Nullable
        assertEquals(expectedHp, monster.getStats().getHp());
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:55: error: [NullAway] dereferenced expression healerPlayer.getJob() is @Nullable
        healerPlayer.getJob().addSkill(createSkill(EffectType.NECROMANCY, ANGELIC_CALLING_NAME, ANGELIC_CALLING_RECOVERY_HP));
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:61: error: [NullAway] dereferenced expression monster.getStats() is @Nullable
        assertEquals(expectedHp, monster.getStats().getHp());
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:54: error: [NullAway] dereferenced expression getJob() is @Nullable
        Skill skill = getJob().getSkill(skillName);
                              ^
    (see http://t.uber.com/nullaway )
18 errors
